fix assembly dcker-compose
